# OOPlabs

./: .gitignore  README.md
Lab1/: CMakeLists.txt
Lab1/include/: plant_growth.h
Lab1/src/: main.cpp  plant_growth.cpp
Lab1/tests/: test_plant_growth.cpp
